<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic -->
    <string name="app_name">Basking</string>
    <string name="settings">Settings</string>
    <string name="login">Log in</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sync">Sync</string>
    <string name="directory">Directory</string>
    <string name="sync_directory">Sync Directory</string>
    <string name="version">Version</string>
    <string name="about">About</string>

    <!-- Menu -->
    <string name="menu_source">Source Code</string>

    <!-- Collection -->
    <string name="collection_empty">No items in collection</string>

    <!-- Account preference -->
    <string name="pref_error_username_required">A username is required</string>
    <string name="pref_error_password_required">Min. length is 5 characters</string>
    <string name="pref_error_noconnection_title">Could not contact server</string>
    <string name="pref_error_noconnection_message">Could not contact the server to confirm your credentials. Continue anyway?</string>
    <string name="pref_error_badpassword_title">Invalid credentials</string>
    <string name="pref_error_badpassword_message">The username or password you entered is incorrect. Please try again.</string>
    <string name="pref_sync_interval_title">Background sync</string>
    <string name="pref_sync_interval_summary_on">Daily</string>
    <string name="pref_sync_interval_summary_off">Never</string>

    <!-- Generic status messages. Used for notifications / the main sync information display. -->
    <string name="status_retrieving_profile">Signing in…</string>
    <string name="status_building_sync_plan">Scanning library…</string>
    <string name="status_deleting_items">Deleting removed items…</string>
    <string name="status_downloading">"Downloading…"</string>
    <string name="status_downloading_song">"Downloading '%1$s - %2$s'…"</string>
    <string name="status_generating_playlists">Creating playlists…</string>
    <string name="status_updating_media_library">Updating media library…</string>
    <string name="status_finished">Sync finished</string>
    <string name="status_error_noconnection">No network connection.</string>
    <string name="status_error_cancelled">Sync cancelled.</string>
    <string name="status_error_invalidcredentials">Username/password is invalid.</string>
    <string name="status_error_serverissue">Server is not responding.</string>
    <string name="status_error_unknown">An unknown error occurred.</string>

    <!-- Sync ongoing notification -->
    <string name="notif_ongoing_title">Synchronising</string>
    <string name="notif_ongoing_ticker">@string/notif_ongoing_title</string>

    <!-- Sync success notification -->
    <string name="notif_finished_success_title">Sync finished</string>
    <string name="notif_finished_success_ticker">@string/notif_finished_success_title</string>
    <string name="notif_finished_success_subtitle_unchanged">No new items.</string>

    <plurals name="notif_finished_success_subtitle_added">
        <item quantity="one">Added %d item.</item>
        <item quantity="other">Added %d items.</item>
    </plurals>
    <plurals name="notif_finished_success_subtitle_removed">
        <item quantity="one">Removed %d item.</item>
        <item quantity="other">Removed %d items.</item>
    </plurals>
    <plurals name="notif_finished_success_subtitle_added_and_removed">
        <item quantity="one">Added %1$d item, removed %2$d.</item>
        <item quantity="other">Added %1$d items, removed %2$d.</item>
    </plurals>

    <!-- Sync failure notification -->
    <string name="notif_finished_failure_title">Sync error</string>
    <string name="notif_finished_failure_ticker">@string/notif_finished_failure_title</string>
    <string name="notif_finished_failure_subtitle_noconnection">@string/status_error_noconnection</string>
    <string name="notif_finished_failure_subtitle_invalidcredentials">@string/status_error_invalidcredentials</string>
    <string name="notif_finished_failure_subtitle_serverissue">@string/status_error_serverissue</string>
    <string name="notif_finished_failure_subtitle_cancelled">@string/status_error_cancelled</string>
    <string name="notif_finished_failure_subtitle_unknown">@string/status_error_unknown</string>

</resources>
